# Geometric-Resonance-Engine

./: .gitignore  01_Bloch_Sphere_Visualization.ipynb  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_verify.py  pre_bash_guard.py  session_bootstrap.py
.github/: CODEOWNERS  SECURITY.md
docs/: compiler.md  corpus_gap_report.md  corpus_taxonomy.md  hardware_run_plan.md  import_format.md  research_corpus.md
examples/: first_corpus_query.py
gre/: __init__.py  engine.py
gre/api/: __init__.py
gre/compiler/: __init__.py  attractor.py  bridge.py  comparison.py  compiler.py  ir.py  partitions.py  resonance.py  symmetry.py
gre/core/: __init__.py  circuit.py  exceptions.py  geometry.py  graph.py
gre/fractals/: __init__.py  base.py  registry.py  sierpinski.py
gre/hardware/: __init__.py
gre/metrics/: __init__.py
gre/quantum/: __init__.py  gates.py  mapper.py  qutrit.py  validation.py  walk_circuit.py
gre/research/: __init__.py  artifacts.py  calibration_fetch.py  catalog.py  corpus.py  corpus_report.py  ingest.py  linkage.py  loader.py  normalizers.py  provenance.py  schemas.py  seed_corpus.py
gre/simulation/: __init__.py  entropy.py  quantum_walk.py
gre/visualization/: __init__.py
scripts/: backfill_corpus_fields.py  benchmark_compiler.py  compute_lambda2_from_counts.py  generate_heron_r2_calibration.py  import_new_ibm_jobs.py  stage_hardware_circuits.py
staged/hardware_run_plan/: hanoi-L4-ibm_fez.qasm  (+17 more)
tests/: test_calibration_fetch.py  test_compiler_fixtures.py  test_compiler_snapshot.py  test_corpus_ingestion.py
(+17 files in other folders)
