[project]
name = "geometric-resonance-engine"
version = "0.1.0"
description = "Hybrid classical+quantum platform centered on fractal geometry as information architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Geometric Resonance Engine Contributors"}
]
keywords = ["fractal", "quantum-walk", "sierpinski", "resonance", "quantum", "geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "qiskit>=1.0",
    "qiskit-ibm-provider>=0.7",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "pydantic>=2.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23",
    "mypy>=1.7",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
